[gd_scene load_steps=3 format=3 uid="uid://bxrevbcsg0grn"]

[ext_resource type="Script" uid="uid://b3ojs50co3ul7" path="res://game_scenes/round_info_popup/round_info_popup.gd" id="1_gmerh"]
[ext_resource type="FontFile" uid="uid://duv0rbeynolx2" path="res://pixel font/kongtext.ttf" id="1_s2h3v"]

[node name="RoundInfoPopup" type="Panel"]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 128.0
offset_right = -192.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmerh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 104.0
offset_right = 960.0
offset_bottom = 488.0
color = Color(0.188235, 0.188235, 0.188235, 0.901961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(700, 350)
layout_direction = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 232.0
offset_top = 120.0
offset_right = 932.0
offset_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2h3v")
theme_override_font_sizes/font_size = 19
text = "Round Info"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.42
theme_override_fonts/normal_font = ExtResource("1_s2h3v")
theme_override_fonts/bold_font = ExtResource("1_s2h3v")
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
text = "Description
"

[node name="SubSystems" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_s2h3v")
theme_override_font_sizes/font_size = 16
text = "Subsystems Offline: None"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2h3v")
text = "Continue to Round
"
